--- a/help/help_ar.html
+++ b/help/help_ar.html
@@ -126,10 +126,9 @@
             <li>بحث متقدم في نص القرآن الكريم بخطوط عثمانية ومبسطة</li>
             <li>تشغيل التلاوات الصوتية مع مزامنة النص</li>
             <li>نظام متكامل لإدارة الملاحظات والتدبرات</li>
-            <li>إنشاء دورات دراسية وحفظ التقدم</li>
-            <li>استيراد/تصدير الملاحظات بصيغة CSV</li>
+            <li>إنشاء دروس قرآنية</li>
+            <li>استيراد/تصدير التدبرات والملاحظات بصيغة CSV</li>
             <li>واجهة قابلة للتخصيص (وضع ليلي/نهاري)</li>
-            <li>دعم كامل للغة العربية وتصميم RTL</li>
         </ul>
     </div>
 
@@ -147,15 +146,14 @@
             <li>منطقة النتائج:
                 <ul class="feature-list">
                     <li>عرض الآيات المطابقة مع الترقيم القرآني</li>
-                    <li>تمرير سلس مع تحميل تلقائي للنتائج</li>
+                    <li>ظهور سلس للنتائج</li>
                     <li>إمكانية التحديد بالأسهم</li>
                 </ul>
             </li>
-            <li>منطقة التفاصيل:
+            <li>منطقة سياق الآية:
                 <ul class="feature-list">
                     <li>عرض السياق القرآني (5 آيات قبل وبعد)</li>
-                    <li>محرر ملاحظات متقدم مع تنسيق النص</li>
-                    <li>عرض تاريخ الإنشاء والتعديل</li>
+                    <li>محرر ملاحظات و تدبرات  حوال الآية مع تنسيق النص</li>
                 </ul>
             </li>
         </ul>
@@ -167,7 +165,6 @@
         <ul class="feature-list">
             <li>بحث بالكلمات المفتاحية العربية</li>
             <li>مثال: "الرحمن الرحيم"</li>
-            <li>حساس لحالة التشكيل</li>
         </ul>
 
         <h3>البحث بالسورة:</h3>
@@ -189,11 +186,12 @@
         <h2>4. التلاوة الصوتية</h2>
         <h3>مميزات التشغيل:</h3>
         <ul class="feature-list">
-            <li>تشغيل آية محددة (<span class="shortcut-key">Space</span>)</li>
-            <li>تشغيل نطاق آيات (<span class="shortcut-key">Ctrl+R</span>)</li>
-            <li>تشغيل سورة كاملة (<span class="shortcut-key">Ctrl+A</span>)</li>
-            <li>تشغيل جميع النتائج (<span class="shortcut-key">Ctrl+Shift+P</span>)</li>
-            <li>القفز التلقائي للآية التالية</li>
+            <li>الإستماع لآية محددة (<span class="shortcut-key">Space</span>)</li>
+            <li>تكرار الإستماع لنطاق الآيات الناتجة عن البحث بنطاق آيات (<span class="shortcut-key">Ctrl+R</span>)</li>
+            <li>الإستماع لسورة كاملة ثم استمرار التلاوة للقرأن كاملا، تبدأ التلاوة من الآية المحددة (<span class="shortcut-key">Ctrl+A</span>)</li>
+            <li>تلاوة الآية و 5 بعدها ،تبدأ التلاوة من الآية المحددة (<span class="shortcut-key">Ctrl+P</span>)</li>
+            <li>تلاوة جميع النتائج ،تبدأ التلاوة من الآية المحددة (<span class="shortcut-key">Ctrl+Shift+P</span>)</li>
+            <li>كل الحالات يتم فيها التحول التلقائي للآية التالية</li>
         </ul>
 
         <h3>إعدادات الصوت:</h3>
@@ -201,35 +199,44 @@
             <li>تحديد مجلد الصوتيات من القائمة</li>
             <li>صيغة الملفات: SSSAAA.mp3 (3 أرقام للسورة، 3 أرقام للآية)</li>
             <li>مثال: 001001.mp3 لسورة الفاتحة آية 1</li>
+            <li>يمكنك تحميل القرآن الكريم مجزأ الى آيات</li>
         </ul>
     </div>
 
     <div class="section" id="section5">
-        <h2>5. إدارة الملاحظات</h2>
+        <h2>5.  إدارة الملاحظات والتدبرات</h2>
         <h3>العمليات الأساسية:</h3>
         <ul class="feature-list">
             <li>إضافة ملاحظة جديدة (<span class="shortcut-key">Ctrl+N</span>)</li>
             <li>حفظ التعديلات (<span class="shortcut-key">Ctrl+S</span>)</li>
             <li>حذف الملاحظات (<span class="shortcut-key">Ctrl+Delete</span>)</li>
-            <li>حذف جميع ملاحظات آية محددة</li>
         </ul>
 
         <h3>المميزات المتقدمة:</h3>
         <ul class="feature-list">
-            <li>استيراد/تصدير بصيغة CSV (<span class="shortcut-key">Ctrl+I/Ctrl+E</span>)</li>
-            <li>إنشاء دورات دراسية مخصصة</li>
-            <li>التنقل بين الدورات (<span class="shortcut-key">← →</span>)</li>
-            <li>حفظ تلقائي للتقدم في الدورات</li>
+            <li>استيراد/تصدير بصيغة CSV</li>
         </ul>
     </div>
 
     <div class="section" id="section6">
         <h2>6. الميزات المتقدمة</h2>
-        <h3>منظم الآيات:</h3>
+        <h3>منظم دروس القرآن الكريم:</h3>
+        <p>يمكنك من تسجيل عدة عمليات ثم تطبيقها بشكل أوتوماتيكي، مثلا تسجيل آية أو آيات، ثم بحث عن كلمة ، ثم آية وهكذا، ثم بعد ذلك  تستطيع استعمال هذا التسجيل أثناء عرضك لدرس قرآني</p>
+        <p>النقر مرتين أو (<span class="shortcut-key">Enter</span>) على تسجيل فارغ يمكنك من الكتابة</p>
         <ul class="feature-list">
             <li>فتح المنظم (<span class="shortcut-key">Ctrl+Shift+A</span>)</li>
             <li>إنشاء قوائم مخصصة من الآيات</li>
-            <li>إضافة نطاقات آيات بالصيغة: a سورة آية_بداية آية_نهاية</li>
+            <li>إضافة نطاقات آيات بالصيغة: a سورة آية_بداية آية_نهاية 
+                <br>
+                مثال : a 2 255 أو a 2 255 256
+            </li>
+            <li> تسجبل بحث  : s كلمة بحث
+                <br>
+                مثال : s مصلين
+                <br>
+                 2 مثال : s لا اله الا الله
+            </li>
+            <li> تشغيل/تطبيق العملية المسجلة   (<span class="shortcut-key">Enter</span>) </li>
             <li>حفظ وإدارة قوائم التشغيل</li>
         </ul>
 
@@ -237,7 +244,6 @@
         <ul class="feature-list">
             <li>تبديل الوضع الليلي (<span class="shortcut-key">Ctrl+D</span>)</li>
             <li>تغيير نوع الخط (<span class="shortcut-key">Esc</span>)</li>
-            <li>ضبط حجم الخط</li>
         </ul>
     </div>
 
@@ -277,7 +283,7 @@
                         <td>تشغيل/إيقاف الآية المحددة</td>
                     </tr>
                     <tr>
-                        <td>الصوت</td>
+                        <td>الصوت</td>نطاقات
                         <td><span class="shortcut-key">Ctrl + A</span></td>
                         <td>تشغيل السورة كاملة</td>
                     </tr>
@@ -341,23 +347,7 @@
             <li>البريد الإلكتروني: <a href="mailto:support@mosaid.xyz">support@mosaid.xyz</a></li>
             <li>الموقع الإلكتروني: <a href="https://mosaid.xyz/quran-search">mosaid.xyz/quran-search</a></li>
             <li>قناة التليجرام: <a href="https://t.me/quran_search_support">t.me/quran_search_support</a></li>
-            <li>ساعات الدعم: الأحد - الخميس (9:00 ص - 5:00 م توقيت مكة)</li>
         </ul>
     </div>
-
-    <script>
-        document.querySelectorAll('a[href^="#"]').forEach(anchor => {
-            anchor.addEventListener('click', function (e) {
-                e.preventDefault();
-                const target = document.querySelector(this.getAttribute('href'));
-                if (target) {
-                    target.scrollIntoView({
-                        behavior: 'smooth',
-                        block: 'start'
-                    });
-                }
-            });
-        });
-    </script>
 </body>
 </html>
