updated install scripts

--- a/help/help_ar.html
+++ b/help/help_ar.html
@@ -210,7 +210,7 @@
         <ul class="feature-list">
             <li>إضافة ملاحظة جديدة (<span class="shortcut-key">Ctrl+N</span>)</li>
             <li>حفظ التعديلات (<span class="shortcut-key">Ctrl+S</span>)</li>
-            <li>حذف الملاحظات (<span class="shortcut-key">Ctrl+Delete</span>)</li>
+            <li>حذف الملاحظة (<span class="shortcut-key">Ctrl+Delete</span>)</li>
         </ul>
 
         <h3>المميزات المتقدمة:</h3>
@@ -226,6 +226,8 @@
         <ul class="feature-list">
             <li>فتح المنظم (<span class="shortcut-key">Ctrl+Shift+A</span>)</li>
             <li>يمكنك استعمال زري اليمين و اليسار (<span class="shortcut-key">Left/Right</span>)  للإنتقال بين الدروس المسجلة</li>
+            <li>يمكنك استعمال زري الأعلى و الأسفل (<span class="shortcut-key">Up/Down</span>)  للإنتقال بين  التسجيلات</li>
+            <li>يمكنك استعمال زري الأعلى و الأسفل (<span class="shortcut-key">Ctrl+Up / Ctrl+Down</span>)   لتغيير موقع التسجيلات</li>
             <li>إنشاء قوائم مخصصة من الآيات</li>
             <li>النقر مرتين أو (<span class="shortcut-key">Enter</span>) على تسجيل فارغ يمكنك من الكتابة</li>
             <li>إضافة نطاقات آيات بالصيغة: a سورة آية_بداية آية_نهاية 
@@ -301,7 +303,7 @@
                         <td>
                             <span class="shortcut-key">Backspace</span> 
                         </td>
-                        <td> العودةالى النتائج من سياق الآية </td>
+                        <td> العودة الى النتائج من سياق الآية </td>
                     </tr>                  
                     <tr><td colspan="3" class="category-header">التشغيل الصوتي</td></tr>
                     <tr>
@@ -317,7 +319,7 @@
                     <tr>
                         <td>الصوت</td>
                         <td><span class="shortcut-key">Ctrl + A</span></td>
-                        <td>تلاوة السورة كاملة</td>
+                        <td>تلاوة السورة كاملة و الاستمرار في تلاوة القرآن</td>
                     </tr>
                     <tr>
                         <td>الصوت</td>
@@ -380,6 +382,20 @@
                         </td>
                         <td>التنقل بين التسجيلات</td>
                     </tr>  
+                    <tr>
+                        <td>الدروس</td>
+                        <td>
+                            <span class="shortcut-key">↑ Ctrl + Up</span> / <span class="shortcut-key">Ctrl + Down ↓</span>
+                        </td>
+                        <td>تغيير ترتيب التسجيلات</td>
+                    </tr> 
+                    <tr>
+                        <td>الدروس</td>
+                        <td>
+                            <span class="shortcut-key">Ctrl + Shift + C</span>
+                        </td>
+                        <td>  إضافة الآية المحددة إلى أحد الدروس</td>
+                    </tr> 
                     <tr><td colspan="3" class="category-header">الإعدادات العامة</td></tr>
                     <tr>
                         <td>التخصيص</td>
