More improvements and fixes

--- a/help/help_ar.html
+++ b/help/help_ar.html
@@ -243,7 +243,12 @@
             <li> تشغيل/تطبيق العملية المسجلة   (<span class="shortcut-key">Enter</span>) </li>
             <li>حفظ وإدارة قوائم التشغيل</li>
         </ul>
-
+        <h3>إدارة الآيات المرجعية</h3>
+        <ul class="feature-list">
+            <li>فتح نافذة المرجعيات (<span class="shortcut-key">Ctrl+M</span>)</li>
+            <li> إضافة الآية المحددة الى قائمة المرجعيات (<span class="shortcut-key">Ctrl+Shift+B</span>)</li>
+            <li> حذف الآية المحددة من قائمة المرجعيات (<span class="shortcut-key">Delete</span>)</li>
+        </ul>
         <h3>التخصيص:</h3>
         <ul class="feature-list">
             <li>تبديل الوضع الليلي (<span class="shortcut-key">Ctrl+D</span>)</li>
@@ -395,6 +400,28 @@
                             <span class="shortcut-key">Ctrl + Shift + C</span>
                         </td>
                         <td>  إضافة الآية المحددة إلى أحد الدروس</td>
+                    </tr> 
+                    <tr><td colspan="3" class="category-header"> إدارة المرجعيات</td></tr>
+                    <tr>
+                        <td>المرجعيات</td>
+                        <td>
+                            <span class="shortcut-key">Ctrl + M</span>
+                        </td>
+                        <td>  فتح نافذة المرجعيات </td>
+                    </tr> 
+                    <tr>
+                        <td>المرجعيات</td>
+                        <td>
+                            <span class="shortcut-key">Ctrl + Shift + B</span>
+                        </td>
+                        <td>   إضافة الآية المحددة الى قائمة المرجعيات  </td>
+                    </tr> 
+                    <tr>
+                        <td>المرجعيات</td>
+                        <td>
+                            <span class="shortcut-key">Delete</span>
+                        </td>
+                        <td>   حذف الآية المحددة من قائمة المرجعيات  </td>
                     </tr> 
                     <tr><td colspan="3" class="category-header">الإعدادات العامة</td></tr>
                     <tr>
