Added font size control

--- a/help/help_ar.html
+++ b/help/help_ar.html
@@ -439,6 +439,16 @@
                         <td><span class="shortcut-key">Esc</span></td>
                         <td>تبديل نوع الخط</td>
                     </tr>
+                    <tr>
+                        <td>التخصيص</td>
+                        <td><span class="shortcut-key">Ctrl+=</span></td>
+                        <td> زيادة حجم الخط</td>
+                    </tr>
+                    <tr>
+                        <td>التخصيص</td>
+                        <td><span class="shortcut-key">Ctrl+-</span></td>
+                        <td> نقصان حجم الخط</td>
+                    </tr>
                 </tbody>
             </table>
         </div>
