Added font size control

--- a/help/help_ar.html
+++ b/help/help_ar.html
@@ -281,6 +281,11 @@
                     </tr>
                     <tr>
                         <td>التنقل</td>
+                        <td><span class="shortcut-key">Ctrl + Shift + W</span></td>
+                        <td>التحول الى "البحث بنطاق الآيات" ثم الانتقال إلى حقل البحث</td>
+                    </tr>
+                    <tr>
+                        <td>التنقل</td>
                         <td><span class="shortcut-key">Ctrl + J</span></td>
                         <td>الانتقال إلى سورة الآية المحددة</td>
                     </tr>
@@ -335,6 +340,11 @@
                         <td>الصوت</td>
                         <td><span class="shortcut-key">Ctrl + R</span></td>
                         <td> تكرار الإستماع لنطاق الآيات الناتجة عن البحث بنطاق آيات </td>
+                    </tr>
+                    <tr>
+                        <td>الصوت</td>
+                        <td><span class="shortcut-key">Ctrl + Shift + R</span></td>
+                        <td> تكرار الإستماع لجميع النتائج      </td>
                     </tr>
                     <tr>
                         <td>الصوت</td>
