--- a/help/help_ar.html
+++ b/help/help_ar.html
@@ -179,6 +179,7 @@
             <li>صيغة: [رقم السورة] [الآية الأولى] [الآية الأخيرة]</li>
             <li>مثال 1: "2 255" لآية الكرسي</li>
             <li>مثال 2: "2 255 260" للآيات 255-260 من البقرة</li>
+            <li>  إختصار البحث بنطاق الآيات    (<span class="shortcut-key">Ctrl+Shfit+W</span>)</li>
         </ul>
     </div>
 
@@ -186,9 +187,10 @@
         <h2>4. التلاوة الصوتية</h2>
         <h3>مميزات التشغيل:</h3>
         <ul class="feature-list">
-            <li>الإستماع لآية محددة (<span class="shortcut-key">Space</span>)</li>
+            <li>الإستماع لآية محددة أو توقيف/تشغيل التلاوة (<span class="shortcut-key">Space</span>)</li>
             <li>توقيف وإنهاء التلاوة   (<span class="shortcut-key">Ctrl+S</span>)</li>
-            <li>تكرار الإستماع لنطاق الآيات الناتجة عن البحث بنطاق آيات (<span class="shortcut-key">Ctrl+R</span>)</li>
+            <li>تكرار الإستماع لجميع النتائج (<span class="shortcut-key">Ctrl+R</span>)</li>
+            <li>تكرار الإستماع لجميع النتائج عددا محددا من المرات (<span class="shortcut-key">Ctrl+Shift+R</span>)</li>
             <li>الإستماع لسورة كاملة ثم استمرار التلاوة للقرأن كاملا، تبدأ التلاوة من الآية المحددة (<span class="shortcut-key">Ctrl+A</span>)</li>
             <li>تلاوة الآية و 5 بعدها ،تبدأ التلاوة من الآية المحددة (<span class="shortcut-key">Ctrl+P</span>)</li>
             <li>تلاوة جميع النتائج ،تبدأ التلاوة من الآية المحددة (<span class="shortcut-key">Ctrl+Shift+P</span>)</li>
@@ -319,7 +321,7 @@
                     <tr>
                         <td>الصوت</td>
                         <td><span class="shortcut-key">Space</span></td>
-                        <td>تلاوة الآية المحددة</td>
+                        <td>تلاوة الآية المحددة أو توقيف/تشغيل التلاوة </td>
                     </tr>
                     <tr>
                         <td>الصوت</td>
@@ -339,12 +341,12 @@
                     <tr>
                         <td>الصوت</td>
                         <td><span class="shortcut-key">Ctrl + R</span></td>
-                        <td> تكرار الإستماع لنطاق الآيات الناتجة عن البحث بنطاق آيات </td>
+                        <td> تكرار الإستماع  لجميع النتائج   </td>
                     </tr>
                     <tr>
                         <td>الصوت</td>
                         <td><span class="shortcut-key">Ctrl + Shift + R</span></td>
-                        <td> تكرار الإستماع لجميع النتائج      </td>
+                        <td>  تكرار الإستماع  لجميع النتائج عددا محددا من المرات  </td>
                     </tr>
                     <tr>
                         <td>الصوت</td>
