--- a/help/help_ar.html
+++ b/help/help_ar.html
@@ -226,7 +226,8 @@
         <h3>منظم دروس القرآن الكريم:</h3>
         <p>يمكنك من تسجيل عدة عمليات ثم تطبيقها بشكل أوتوماتيكي، مثلا تسجيل آية أو آيات، ثم بحث عن كلمة ، ثم آية وهكذا، ثم بعد ذلك  تستطيع استعمال هذا التسجيل أثناء عرضك لدرس قرآني</p>
         <ul class="feature-list">
-            <li>فتح المنظم (<span class="shortcut-key">Ctrl+Shift+A</span>)</li>
+            <li>فتح المنظم (<span class="shortcut-key">Ctrl+Shift+C</span>)</li>
+            <li>إضافة الآية المحددة الى أحد الدروس  (<span class="shortcut-key">Ctrl+C</span>)</li>
             <li>يمكنك استعمال زري اليمين و اليسار (<span class="shortcut-key">Left/Right</span>)  للإنتقال بين الدروس المسجلة</li>
             <li>يمكنك استعمال زري الأعلى و الأسفل (<span class="shortcut-key">Up/Down</span>)  للإنتقال بين  التسجيلات</li>
             <li>يمكنك استعمال زري الأعلى و الأسفل (<span class="shortcut-key">Ctrl+Up / Ctrl+Down</span>)   لتغيير موقع التسجيلات</li>
@@ -247,8 +248,8 @@
         </ul>
         <h3>إدارة الآيات المرجعية</h3>
         <ul class="feature-list">
-            <li>فتح نافذة المرجعيات (<span class="shortcut-key">Ctrl+M</span>)</li>
-            <li> إضافة الآية المحددة الى قائمة المرجعيات (<span class="shortcut-key">Ctrl+Shift+B</span>)</li>
+            <li>فتح نافذة المرجعيات (<span class="shortcut-key">Ctrl+Shift+B</span>)</li>
+            <li> إضافة الآية المحددة الى قائمة المرجعيات (<span class="shortcut-key">Ctrl+B</span>)</li>
             <li> حذف الآية المحددة من قائمة المرجعيات (<span class="shortcut-key">Delete</span>)</li>
         </ul>
         <h3>التخصيص:</h3>
@@ -382,7 +383,7 @@
                     <tr><td colspan="3" class="category-header">إدارة الدروس</td></tr>
                     <tr>
                         <td>الدروس</td>
-                        <td><span class="shortcut-key">Ctrl + Shift + A</span></td>
+                        <td><span class="shortcut-key">Ctrl + Shift + C</span></td>
                         <td> إظهار نافذة الدروس</td>
                     </tr>
                     <tr>
@@ -409,7 +410,7 @@
                     <tr>
                         <td>الدروس</td>
                         <td>
-                            <span class="shortcut-key">Ctrl + Shift + C</span>
+                            <span class="shortcut-key">Ctrl + C</span>
                         </td>
                         <td>  إضافة الآية المحددة إلى أحد الدروس</td>
                     </tr> 
@@ -417,14 +418,14 @@
                     <tr>
                         <td>المرجعيات</td>
                         <td>
-                            <span class="shortcut-key">Ctrl + M</span>
+                            <span class="shortcut-key">Ctrl + Shift + B</span>
                         </td>
                         <td>  فتح نافذة المرجعيات </td>
                     </tr> 
                     <tr>
                         <td>المرجعيات</td>
                         <td>
-                            <span class="shortcut-key">Ctrl + Shift + B</span>
+                            <span class="shortcut-key">Ctrl + B</span>
                         </td>
                         <td>   إضافة الآية المحددة الى قائمة المرجعيات  </td>
                     </tr> 
