--- a/help/help_ar.html
+++ b/help/help_ar.html
@@ -125,7 +125,7 @@
         <ul class="feature-list">
             <li>بحث متقدم في نص القرآن الكريم بخطوط عثمانية ومبسطة</li>
             <li>تشغيل التلاوات الصوتية مع مزامنة النص</li>
-            <li>نظام متكامل لإدارة الملاحظات والتدبرات</li>
+            <li>نظام متكامل لإدارة الملاحظات والتدبرات و المرجعيات</li>
             <li>إنشاء دروس قرآنية</li>
             <li>استيراد/تصدير التدبرات والملاحظات بصيغة CSV</li>
             <li>واجهة قابلة للتخصيص (وضع ليلي/نهاري)</li>
@@ -210,9 +210,10 @@
         <h2>5.  إدارة الملاحظات والتدبرات</h2>
         <h3>العمليات الأساسية:</h3>
         <ul class="feature-list">
-            <li>إضافة ملاحظة جديدة (<span class="shortcut-key">Ctrl+N</span>)</li>
+            <li>إضافة ملاحظة جديدة إذا كانت نافذة سياق الآية ظاهرة (<span class="shortcut-key">Ctrl+N</span>)</li>
+            <li>إضافة ملاحظة جديدة إلى الآية المحددة      (<span class="shortcut-key">Ctrl+N</span>)</li>
             <li>حفظ التعديلات (<span class="shortcut-key">Ctrl+S</span>)</li>
-            <li>حذف الملاحظة (<span class="shortcut-key">Ctrl+Delete</span>)</li>
+            <li>حذف الملاحظة (<span class="shortcut-key">Delete</span>)</li>
         </ul>
 
         <h3>المميزات المتقدمة:</h3>
@@ -226,12 +227,11 @@
         <h3>منظم دروس القرآن الكريم:</h3>
         <p>يمكنك من تسجيل عدة عمليات ثم تطبيقها بشكل أوتوماتيكي، مثلا تسجيل آية أو آيات، ثم بحث عن كلمة ، ثم آية وهكذا، ثم بعد ذلك  تستطيع استعمال هذا التسجيل أثناء عرضك لدرس قرآني</p>
         <ul class="feature-list">
-            <li>فتح المنظم (<span class="shortcut-key">Ctrl+Shift+C</span>)</li>
-            <li>إضافة الآية المحددة الى أحد الدروس  (<span class="shortcut-key">Ctrl+C</span>)</li>
+            <li>فتح المنظم (<span class="shortcut-key">Ctrl+Shift+T</span>)</li>
+            <li>  إضافة الآية المحددة الى أحد الدروس أو إنشاء درس جديد (<span class="shortcut-key">Ctrl+T</span>)</li>
             <li>يمكنك استعمال زري اليمين و اليسار (<span class="shortcut-key">Left/Right</span>)  للإنتقال بين الدروس المسجلة</li>
             <li>يمكنك استعمال زري الأعلى و الأسفل (<span class="shortcut-key">Up/Down</span>)  للإنتقال بين  التسجيلات</li>
             <li>يمكنك استعمال زري الأعلى و الأسفل (<span class="shortcut-key">Ctrl+Up / Ctrl+Down</span>)   لتغيير موقع التسجيلات</li>
-            <li>إنشاء قوائم مخصصة من الآيات</li>
             <li>النقر مرتين أو (<span class="shortcut-key">Enter</span>) على تسجيل فارغ يمكنك من الكتابة</li>
             <li>إضافة نطاقات آيات بالصيغة: a سورة آية_بداية آية_نهاية 
                 <br>
@@ -241,10 +241,14 @@
                 <br>
                 مثال : s مصلين
                 <br>
-                 2 مثال : s لا اله الا الله
+                     2 مثال : s لا اله الا الله
             </li>
             <li> تشغيل/تطبيق العملية المسجلة   (<span class="shortcut-key">Enter</span>) </li>
-            <li>حفظ وإدارة قوائم التشغيل</li>
+            <li>حذف كل النص من تسجيل معين يحذفه</li>
+            <li>   أو حذف التسجيل المحدد باستعمال (<span class="shortcut-key">Delete</span>) </li>
+            <li>حذف كل تسجيلات درس معين ثم الضغط على (<span class="shortcut-key">Save</span>) يحذفه</li>
+            <li>   أو حذف الدرس المحدد باستعمال (<span class="shortcut-key">Ctrl + Delete</span>) </li>
+
         </ul>
         <h3>إدارة الآيات المرجعية</h3>
         <ul class="feature-list">
