added quran words dictionary dialog

--- a/resources/help/help_ar.html
+++ b/resources/help/help_ar.html
@@ -180,6 +180,13 @@
             <li>بحث بالكلمات المفتاحية العربية مع دعم التشكيل الجزئي</li>
             <li>نتائج فورية مع تمييز الكلمات المطابقة</li>
             <li>مثال: "الرحمن الرحيم"</li>
+            <li>إضافة رمز # إلى كلمة البحث يعني البحث عن الكلمة نفسها بالضبط، مثلا "الغي#" يعطي نتائج كلمة الغي فقط وليس الغي و الغيب والغيظ وغيرها... </li>
+            <li> "%غي" تعطي نتائج فيها كلمات تبدأ بالغاء والياء فتكون النتائج فيها غيا وليس فيها الغيب </li>
+            <li> "غي%" تعطي نتائج فيها كلمات تنتهي بالغاء والياء فتكون النتائج فيها نبغي و تبغي وليس فيها غيا </li>
+            <li> "%غي%" تعطي نتائج فيها كلمة غي بالضبط مثل إضافة رمز # إلى حقل البحث   </li>
+            <li>إضافة الرمز @ إلى حقل البحث يمنع البرنامج من حذف الهمزة خلال البحث وإبدالها بالألف</li>
+
+
         </ul>
 
         <h3>البحث بالسورة:</h3>
